Sorted some alignment issues

--- a/JSProject.css
+++ b/JSProject.css
@@ -5,7 +5,7 @@ html {
 
 .main {
   background-color: #eed269;
-  width: 50%;
+  width: 40%;
   height: 100%;
   margin: 0 auto;
 }
@@ -53,7 +53,7 @@ h1 {
 
 .fa-users {
   color: #0b3765;
-  margin: 0 5% 5% 0%;
+  margin: 0 3% 5% 0%;
 }
 
 #numberofpeople {
@@ -91,7 +91,7 @@ button {
   background-color: #0b3765;
   color: white;
   height: 10%;
-  width: 25%;
+  width: 33%;
   display: flex;
   align-content: center;
   margin: 0 auto;
@@ -102,5 +102,9 @@ button {
 @media (max-width: 375px) {
   .main {
     width: 100%;
+  }
+
+  button {
+    width: 51%;
   }
 }
